<resources>
    <string name="app_name" translatable="false">Mentora</string>

    <!-- Bottom Navigation Labels -->
    <string name="nav_home">Home</string>
    <string name="nav_favourites">Favourites</string>
    <string name="nav_profile">Profile</string>

    <!-- Home Screen -->
    <string name="btn_funnel">Filter button</string>
    <string name="sort_by_date">Sort by publish date</string>
    <string name="search_courses">Search courses…</string>

    <!-- Course Item -->
    <string name="course_title_placeholder">Course Title</string>
    <string name="course_description_placeholder">Course Description</string>
    <string name="course_date_placeholder">Date</string>
    <string name="course_price_placeholder">Price</string>
    <string name="course_rating_placeholder">Rating</string>

    <string name="course_learn_more">Learn more</string>
    <string name="course_favourite">Favourite</string>
    <string name="course_illustration">Illustration</string>
    <string name="course_stars">Stars</string>

    <!-- Login Screen -->
    <string name="login_title">Login</string>

    <string name="login_label_email" translatable="false">Email</string>
    <string name="login_email_hint" translatable="false">example@gmail.com</string>

    <string name="login_label_password">Password</string>
    <string name="login_password_hint">Enter password</string>

    <string name="login_action_sign_in">Sign in</string>

    <string name="login_error_invalid_email">Not a valid email</string>
    <string name="login_error_invalid_password">Password must be >5 characters</string>
    <string name="login_error_failed">Login failed</string>

    <string name="login_no_account">No account?</string>
    <string name="login_register">Sign up</string>
    <string name="login_forgot_password">Forgot password?</string>

    <string name="login_with_vk">Log in with VK</string>
    <string name="login_with_ok">Log in with Odnoklassniki</string>

    <!-- Profile screen -->
    <string name="profile_title_account">Account</string>

    <string name="profile_your_courses">Your Courses</string>
    <string name="profile_contact_us">Contact us</string>
    <string name="profile_settings">Settings</string>
    <string name="favourites">Favourites</string>
    <string name="profile_exit">Exit</string>
</resources>