<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_surface"
    android:padding="16dp"
    tools:context=".presentation.ui.login.LoginFragment">

    <TextView
        android:id="@+id/text_view_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/login_title"
        android:textColor="@color/on_background_surface"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/text_view_email"
        app:layout_constraintStart_toStartOf="@+id/text_view_email"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/text_view_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_medium"
        android:letterSpacing="0.01"
        android:text="@string/login_label_email"
        android:textColor="@color/on_background_surface"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_email"
        app:layout_constraintStart_toStartOf="@+id/edit_text_email"
        app:layout_constraintTop_toBottomOf="@+id/text_view_login" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/on_surface_variant"
        android:textColorHint="@color/on_surface_variant"
        app:layout_constraintBottom_toTopOf="@+id/text_view_password"
        app:layout_constraintStart_toStartOf="@+id/text_view_password"
        app:layout_constraintTop_toBottomOf="@+id/text_view_email" />

    <TextView
        android:id="@+id/text_view_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_medium"
        android:letterSpacing="0.01"
        android:text="@string/login_label_password"
        android:textColor="@color/on_background_surface"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_password"
        app:layout_constraintStart_toStartOf="@+id/edit_text_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_email" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/login_password_hint"
        android:imeActionLabel="@string/login_action_sign_in"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/on_surface_variant"
        android:textColorHint="@color/on_surface_variant"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/text_view_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_gravity="start"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/button_color"
        android:enabled="false"
        android:fontFamily="@font/roboto_medium"
        android:padding="10dp"
        android:textSize="16sp"
        android:text="@string/login_action_sign_in"
        android:textColor="@color/on_primary"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/text_view_no_account"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

    <TextView
        android:id="@+id/text_view_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_semi_bold"
        android:text="@string/login_no_account"
        android:textColor="@color/on_background_surface"
        app:layout_constraintBottom_toTopOf="@+id/text_view_forgot_password"
        app:layout_constraintEnd_toStartOf="@+id/text_view_register"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/text_view_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto_semi_bold"
        android:minHeight="48dp"
        android:text="@string/login_forgot_password"
        android:textColor="@color/text_ripple"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_no_account" />

    <TextView
        android:id="@+id/text_view_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto_semi_bold"
        android:text="@string/login_register"
        android:textColor="@color/text_ripple"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_no_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_view_no_account"
        app:layout_constraintTop_toTopOf="@+id/text_view_no_account" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="32dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/on_background_surface"
        app:layout_constraintBottom_toTopOf="@+id/btn_login_ok"
        app:layout_constraintTop_toBottomOf="@+id/text_view_forgot_password"
        tools:layout_editor_absoluteX="16dp" />

    <ImageButton
        android:id="@+id/btn_login_vk"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/btn_vk_ripple"
        android:clickable="true"
        android:contentDescription="@string/login_with_vk"
        android:focusable="true"
        android:minWidth="48dp"
        android:padding="0dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_vk"
        app:layout_constraintBottom_toBottomOf="@+id/btn_login_ok"
        app:layout_constraintEnd_toStartOf="@+id/btn_login_ok"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_login_ok" />

    <ImageButton
        android:id="@+id/btn_login_ok"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/btn_ok_ripple"
        android:clickable="true"
        android:contentDescription="@string/login_with_ok"
        android:focusable="true"
        android:minWidth="48dp"
        android:padding="0dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_login_vk"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>